--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <!-- Cart Section -->
       <div class="cart">
         Your Cart
-        <span>(0)</span>
+        <p id="cartItemsCount">(0)</p>
       </div>
     </div>
   </body>
