finish cart. responsiveness nad fucntion are next.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
       <!-- Cart Section -->
       <div class="cart">
         Your Cart
-        <p id="cartItemsCount">(0)</p>
+        <span id="cartItemsCount">(0)</span>
+        <p id="cartItems">
+          <img
+            src="./assets/images/illustration-empty-cart.svg"
+            alt="illustration-empty-cart.svg"
+          />
+        </p>
+        <p class="empty-cart-message">Your added items will appear here</p>
       </div>
     </div>
   </body>
