fix epmty cart image and message when there is none and atleast one item in the cart.

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div class="cart">
         Your Cart
         <span id="cartItemsCount">(0)</span>
-        <p id="cartItems">
-          <img
-            src="./assets/images/illustration-empty-cart.svg"
-            alt="illustration-empty-cart.svg"
-          />
-        </p>
+        <div id="cartItems"></div>
+        <img
+          id="emptyCartImg"
+          src="./assets/images/illustration-empty-cart.svg"
+          alt="illustration-empty-cart.svg"
+        />
         <p class="empty-cart-message">Your added items will appear here</p>
       </div>
     </div>
