--- a/index.html
+++ b/index.html
@@ -34,5 +34,17 @@
         <p class="empty-cart-message">Your added items will appear here</p>
       </div>
     </div>
+    <!-- Modal -->
+    <div id="cartModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Your Cart</h2>
+        <div id="modalCartItems"></div>
+        <div class="modal-total">
+          <div>Total Price: $<span id="modalTotalPrice">0.00</span></div>
+        </div>
+        <button id="modalConfirmOrder">Confirm Order</button>
+      </div>
+    </div>
   </body>
 </html>
