--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
     <div id="cartModal" class="modal">
       <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>Your Cart</h2>
+        <img src="./assets/images/icon-order-confirmed.svg" alt="" srcset="" />
+        <p class="order-confirmed-label">Order Confirmed</p>
+        <p class="enjoy-label">We hope you enjoy your food!</p>
         <div id="modalCartItems"></div>
         <div class="modal-total">
           <div>Total Price: $<span id="modalTotalPrice">0.00</span></div>
         </div>
+        <button class="start-new-order-btn">Start New Order</button>
       </div>
     </div>
   </body>
