--- a/index.html
+++ b/index.html
@@ -41,9 +41,18 @@
         <img src="./assets/images/icon-order-confirmed.svg" alt="" srcset="" />
         <p class="order-confirmed-label">Order Confirmed</p>
         <p class="enjoy-label">We hope you enjoy your food!</p>
-        <div id="modalCartItems"></div>
+        <div id="modalCartItems">
+          <div></div>
+          <p></p>
+          <!-- <img
+            src="./assets/images/image-baklava-desktop.jpg"
+            alt=""
+            srcset=""
+          /> -->
+        </div>
         <div class="modal-total">
-          <div>Total Price: $<span id="modalTotalPrice">0.00</span></div>
+          <span>Order Total</span>
+          <span id="modalTotalPrice">0.00</span>
         </div>
         <button class="start-new-order-btn">Start New Order</button>
       </div>
