finish only bug is when web refreshes quantity control dosent retain

--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
         <img src="./assets/images/icon-order-confirmed.svg" alt="" srcset="" />
         <p class="order-confirmed-label">Order Confirmed</p>
         <p class="enjoy-label">We hope you enjoy your food!</p>
-        <div id="modalCartItems">
-        </div>
+        <div id="modalCartItems"></div>
         <div class="modal-total">
           <span>Order Total</span>
           <span id="modalTotalPrice">0.00</span>
